Update CSS and HTML files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="d-flex w-100">
-  <div class="sidemenu_container">
+<div class="d-flex w-100 h-auto">
+  <div class="sidemenu_container bg-dark">
     <molecule-sidebar>
     </molecule-sidebar>
   </div>
-  <div class="home_container">
+  <div class="home_container h-auto">
     <app-home>
     </app-home>
   </div>
