--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,6 +6,8 @@
   <atom-search-box></atom-search-box>
 
   <div class="col-12">
-    <molecule-card-list></molecule-card-list>
+    <molecule-card-list
+      [gifs]="gifs">
+    </molecule-card-list>
   </div>
 </section>
